# Data-Structure

./: .gitignore  CMakeLists.txt  README.md  SuggestionEngine.cpp  SuggestionEngine.h  data.comp  decompression.cpp  extractTag.cpp  extractTag.h  graph.cpp  graphParser.cpp  input_file.xml  main.cpp  mostInfluencerId.cpp  most_active.cpp  most_active.h  mutualFollowers.cpp  mutualFollowers.h  validation-XML.cpp  xml_repair.cpp  xml_verify
CLI/: CommandLine.cpp  CommandLine.h
GUI/: mainwindow.cpp  mainwindow.h
Logic/: TopicSearch.cpp  TopicSearch.h  XmlEditorManager.h  XmlFormatter.h
Logic/Analysis/: SuggestionEngine.cpp  SuggestionEngine.h  TopicSearch.cpp  TopicSearch.h  mostInfluencerId.cpp  mostInfluencerId.h  most_active.cpp  most_active.h  mutualFollowers.cpp  mutualFollowers.h
Logic/Formatting/: XmlFormaatter.cpp
Logic/Graph/: graph.h  graphParser.cpp  graphParser.h
Logic/Interfaces/: XmlOperation.h
Logic/JSON/: JsonConverter.cpp  JsonConverter.h
Logic/Services/Compression/: CompressionService.cpp  CompressionService.h  decompression.cpp  decompression.h
Logic/Services/Formatting/: XmlFormatter.cpp  XmlFormatter.h
Logic/Services/Graph/: GraphVisualizer.cpp  GraphVisualizer.h
Logic/Services/JSON/: JsonConverter.h
Logic/Services/Minification/: XmlMinifier.cpp  XmlMinifier.h
Logic/Services/Validation/: XmlValidator.cpp  XmlValidator.h
Logic/Tree/: XmlTree.cpp  XmlTree.h
Logic/finalProjectDSA/: sample.xml
Logic/finalProjectDSA/extract/: extract.cpp  extract.h
Logic/finalProjectDSA/main/: main.cpp
Logic/finalProjectDSA/tree/: tree.cpp  tree.h
Logic/finalProjectDSA/validator/: validator.cpp  validator.h
